--- a/src/main.css
+++ b/src/main.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
 }
 
 .flex {
@@ -16,4 +16,9 @@
 
 .column {
   flex-direction: column;
+}
+
+/* COLORS */
+.white {
+  color: white;
 }
