--- a/src/Components/headerComponent/Header.css
+++ b/src/Components/headerComponent/Header.css
@@ -12,3 +12,22 @@
   justify-content: center;
   align-items: center;
 }
+.cartIcon {
+  z-index: 2;
+}
+.dropDown {
+  width: 20rem;
+  background-color: rgba(57, 57, 57, 0.6);
+  position: absolute;
+  top: 0;
+  left: 1;
+  right: 0;
+  bottom: 0;
+  max-height: 400px;
+  transition: all 500ms;
+  z-index: 1;
+  padding-top: 5rem;
+  margin-top: 5rem;
+  color: white;
+  border-radius: 0px 2px 0px 20px;
+}
