--- a/src/Components/cartComponent/cartContainer.css
+++ b/src/Components/cartComponent/cartContainer.css
@@ -20,6 +20,9 @@
   box-shadow: 2px 5px 10px rgb(184, 184, 184);
   flex-wrap: wrap;
   margin-top: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: 1rem;
 }
 .productImageContainer {
   display: flex;
