--- a/src/css/breadcrumbs.css
+++ b/src/css/breadcrumbs.css
@@ -20,3 +20,10 @@
 .bread-btn {
   padding-left: 0;
 }
+
+.slutfort-kop {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5rem;
+}
