--- a/src/main.css
+++ b/src/main.css
@@ -23,9 +23,9 @@
   color: white;
 }
 
-.grey-background {
+/* .grey-background {
   background-color: #ededed;
-}
+} */
 
 .padding2rem {
   padding: 2rem;
