--- a/src/css/checkOut3Payment.css
+++ b/src/css/checkOut3Payment.css
@@ -56,6 +56,7 @@ form h5 {
 
 .move-fwd-btn {
   text-transform: none;
+  width: fit-content;
 }
 
 .choose-payment-btn {
@@ -81,6 +82,11 @@ form h5 {
 }
 
 .payment-info-text {
+  padding: 0;
+  margin-bottom: 1rem;
+}
+
+.swish-modal .input-field {
   margin-bottom: 3rem;
 }
 
