--- a/src/Components/headerComponent/Header.css
+++ b/src/Components/headerComponent/Header.css
@@ -41,6 +41,12 @@
   display: none;
 }
 
+.header img {
+  margin-right: .75rem;
+  width: 40px;
+  height: 40px;
+}
+
 .link-style {
   text-decoration: none;
   color: black;
