--- a/src/css/tournaments.css
+++ b/src/css/tournaments.css
@@ -31,3 +31,12 @@
   height: 1px;
   box-shadow: 0 0.1rem 0 grey;
 }
+
+.bottom-p {
+  color: grey;
+  font-style: italic;
+  font-size: 0.9rem;
+  align-items: center;
+  justify-content: center;
+  padding-top: 0.5rem;
+}
