--- a/src/Components/cartComponent/cartContainer.css
+++ b/src/Components/cartComponent/cartContainer.css
@@ -2,56 +2,68 @@
   width: 100%;
   background-color: lightgray;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   padding: 1rem;
   flex-wrap: wrap;
 }
+
+.product {
+  display: flex;
+  flex-direction: row;
+  margin-right: 3rem;
+}
+
 .itemContainer {
-  background-color: white;
+  background-color: #EDEDED;
   width: 100%;
-  border-radius: 1rem;
+  border-radius: 8px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   padding: 1rem;
-  box-shadow: 2px 3px 5px rgb(184, 184, 184);
-  flex-wrap: wrap;
-  margin-top: 1rem;
-  /* padding-left: 1rem;
-  padding-right: 1rem;*/
-  margin-bottom: 1rem;
+  box-shadow: 0px 2px 5px rgb(187, 187, 187);
+  margin: 1rem 0;
 }
+
+.iconContainer svg {
+  cursor: pointer;
+}
+
 .productImageContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding-right: 1rem;
 }
+
 .img {
   width: 5rem;
-  height: 5rem;
   background-color: lightgray;
 }
+
 .numberContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: white;
 }
+
 .iconContainer {
   display: flex;
   flex-direction: column;
 }
-p {
-  padding: 0.5rem;
+
+.productInfoText p {
+  padding: 0.25rem 0;
 }
+
+.productInfoText {
+  padding: 0 1rem;
+}
+
 .buttonContainer {
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  padding: 1rem;
+  padding: .5rem 0;
 }
