--- a/src/Components/headerComponent/Header.css
+++ b/src/Components/headerComponent/Header.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  padding: 0 2rem;
 }
 .header-icon {
   display: flex;
@@ -33,10 +34,14 @@
 }
 .menu-bar {
   display: flex;
+  align-items: center;
 }
 .menu-button {
   margin-left: 2rem;
 }
+/* .menu-button-last {
+  margin-right: 1rem;
+} */
 .menu-burger-icon {
   display: none;
 }
@@ -56,7 +61,7 @@
   margin-bottom: 10rem;
 }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 820px) {
   .menu-bar {
     display: none;
     background-color: black;
