--- a/src/css/tournaments.css
+++ b/src/css/tournaments.css
@@ -40,3 +40,28 @@
   justify-content: center;
   padding-top: 0.5rem;
 }
+
+.tour-kort-item-contact {
+  display: flex;
+  flex-direction: column;
+
+  padding-left: 2rem;
+}
+
+.kontakt-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.icon-div {
+  padding: 0rem;
+  margin: 0.4rem;
+}
+
+.kontakt-seperator {
+  padding: 0.1rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* justify-content: center; */
+}
