--- a/src/Components/headerComponent/Header.css
+++ b/src/Components/headerComponent/Header.css
@@ -5,6 +5,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  /* position: fixed; */
+  z-index: 100;
 }
 .header-icon {
   display: flex;
@@ -13,7 +15,7 @@
   align-items: center;
 }
 .cartIcon {
-  z-index: 2;
+  z-index: 200;
 }
 .dropDown {
   width: 20rem;
