--- a/src/css/tournaments.css
+++ b/src/css/tournaments.css
@@ -22,6 +22,7 @@
 }
 
 .pic-text {
+  padding: 0.4rem 0 0.2rem 0;
   font-size: 0.9rem;
   font-style: italic;
 }
@@ -47,7 +48,7 @@
   display: flex;
   flex-direction: column;
 
-  padding-left: 2rem;
+  padding-left: 3rem;
 }
 
 .kontakt-container {
@@ -66,4 +67,44 @@
   flex-direction: row;
   align-items: center;
   /* justify-content: center; */
+}
+
+.artikel-grafik {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  max-width: 30%;
+}
+
+.sok-test {
+  margin-top: 5rem;
+}
+
+@media only screen and (max-width: 1000px) {
+  .tour-kort-item-right {
+    padding-left: 0rem;
+  }
+
+  .person-bild {
+    width: 80%;
+  }
+
+  .kontakt-seperator {
+    /* justify-content: center; */
+    left: 0;
+  }
+
+  .tour-kort-item-contact {
+    padding-left: 0rem;
+  }
+
+  .tour-kort-item-contact h3 {
+    font-size: 0.8rem;
+  }
+
+  .component-title h2 {
+    font-size: 2rem;
+  }
 }
