--- a/src/css/checkOut1UserInfo.css
+++ b/src/css/checkOut1UserInfo.css
@@ -109,3 +109,17 @@ form h5 {
     max-width: 600px;
   }
 }
+
+@media (max-width: 630px) {
+  .right-side {
+    margin-left: 0;
+  }
+
+  .left-side {
+    padding-left: 0;
+  }
+
+  .order-overview {
+    margin-top: 0;
+  }
+}
