--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -38,7 +38,7 @@ li {
   color: grey;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 770px) {
   .content {
     flex-direction: column;
     align-items: center;
@@ -50,8 +50,9 @@ li {
     text-align: center;
   }
 
-  ul {
+  .footer-column ul {
     margin: 0 auto;
+    text-align: center;
   }
 
   .divider-container {
