--- a/src/Components/cartComponent/productCart.css
+++ b/src/Components/cartComponent/productCart.css
@@ -10,7 +10,8 @@
 
 .grey-card {
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 5rem auto 0 auto;
+  min-height: 20rem;
 }
 
 .cartInfoContainer {
@@ -55,5 +56,19 @@
 
   .priceInfo {
     margin: 1rem 0 0 1rem
+  }
+}
+
+@media (max-width: 400px) {
+  .background {
+    padding: 0;
+  }
+
+  .grey-card {
+    border-radius: 0;
+  }
+
+  .productImageContainer .img {
+    width: 4rem;
   }
 }
