--- a/src/Components/headerComponent/Header.css
+++ b/src/Components/headerComponent/Header.css
@@ -1,6 +1,5 @@
 .header {
   height: 5rem;
-  width: 100%;
   background-color: lightgray;
   display: flex;
   justify-content: space-around;
@@ -8,6 +7,9 @@
   position: fixed;
   z-index: 100;
   padding: 0 2rem;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 .header-icon {
   display: flex;
